src/objects/ActionOverride__mdt.object
<CustomObject>
    <fields>
        <fullName>ActionName__c</fullName>
        <defaultValue>&quot;new&quot;</defaultValue>
        <label>Action name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowName__c</fullName>
        <label>Flow name (API)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Action_Override_Settings</relationshipLabel>
        <relationshipName>Action_Override_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Action Override Setting</label>
    <pluralLabel>Action Override Settings</pluralLabel>
</CustomObject>